# quantum-stochastic-optimization

./: .gitignore  README.md  data_output.json  pyproject.toml  qchem_adam_shots_1024.json  qchem_adam_shots_65536.json  qchem_tr_shots_1024.json  qchem_tr_shots_1024_experiment_2.json  qchem_tr_shots_65536_experiment_with_hvp_single.json  qchem_tr_shots_65536_experiment_without_hessian.json  qchem_tr_shots_65536_experiment_without_hessian_single.json  run_experiment.sh  run_plots.sh  tox.ini
.github/workflows/: test.yml
data/: qchem.json  qchem_adam.json  qchem_tr_shots_1024_experiment_with_hvp.json  qchem_tr_shots_65536.json  qchem_tr_shots_65536_experiment_2.json
data/adam/multiple_65536/: experiment_0.json  experiment_1.json  experiment_2.json
data/adam/multiple_realloc_65536/: experiment_0.json  experiment_1.json  experiment_2.json
data/adam/single_65536/: experiment_0.json  experiment_1.json  experiment_2.json
data/feature_selection/: adam_experiment.json  multiple_adam_experiment.json  multiple_resample_adam_experiment.json  single_adam_experiment.json
data/feature_selection/adam/: data_description.txt
data/feature_selection/adam_1024_samples_massive/: default.json  expected.json  multiple.json
data/feature_selection/adam_experiment_1024_samples/: multiple_adam_experiment.json  multiple_resample_adam_experiment.json  single_adam_experiment.json
data/feature_selection/adam_experiment_512_samples/: multiple_adam_experiment.json  multiple_resample_adam_experiment.json  single_adam_experiment.json
data/feature_selection/spsa_1024_samples_massive/: default.json  expected.json  multiple.json
data/spsa/multiple_65536/: experiment_2.json
data/tight_binding/adam_experiment_sigma_1.5_complex/: multiple_resample_adam_experiment.json  single_adam_experiment.json
data/tight_binding/adam_experiment_sigma_1.5_simple/: multiple_adam_experiment.json  multiple_resample_adam_experiment.json  single_adam_experiment.json
data/tight_binding/adam_experiment_trotter_1_complex/: single_adam_experiment.json
data/tight_binding/adam_experiment_trotter_1_massive/: default.json  expected.json  multiple.json
data/tight_binding/adam_experiment_trotter_5_complex/: multiple_resample_adam_experiment.json
data/tight_binding/adam_experiment_trotter_5_simple/: multiple_adam_experiment.json  single_adam_experiment.json
qso/: __main__.py  runs.py
qso/data/: feature_selection.py
qso/loggers/: __init__.py
qso/optimizers/: __init__.py  adam.py  optimizer.py  spsa.py  trust_region.py
qso/plot/: __init__.py  __main__.py  runs.py  style.py
qso/problem/: __init__.py  feature_selection.py  parser.py  problem.py  qchem.py  resampling_params.py  runs.py
qso/utils/: __init__.py  ansatz.py  validation.py
run_experiment/: Cargo.toml
run_experiment/src/: main.rs
src/qso/: data_generation.py
tests/problems/: test_qso_problems.py
tests/utils/: test_validation.py
(+444 files in other folders)
