[package]
name = "run_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features=["derive"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
eyre = "0.6"
color-eyre = "0.6"
tmux_interface = "0.3.1"
